new repo migration

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -509,9 +509,9 @@
   background-color: #ffffff8f;
   border-radius: 30px;
   color: black;
-  width: 75vw;
+  width: 70vw;
   max-width: none;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -570,7 +570,7 @@
   align-items: center;
   width: 100%;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .infoBar_right {
@@ -634,12 +634,13 @@
   color: #fff;
 }
 
-.bg_button .tooltip_content {
+.tooltip_content {
   display: none;
   position: absolute;
   right:65px;
   top:20px;
   background-color: rgba(255, 255, 255, 0.4);
+  color: #585858;
   border-radius: 5px;
   padding: .5em;
   min-width: 10rem;
@@ -647,6 +648,11 @@
 
 .bg_button:hover .tooltip_content{
   display: block;
+}
+
+.icon:hover .tooltip_content{
+  display: block;
+  position: absolute;
 }
 
 .topbar_container {
@@ -895,4 +901,14 @@
 .cover_new_entry img {
   height:50px;
   z-index: 6;
+}
+
+.footer_container {
+  width: 100%;
+  position: fixed;
+  bottom: 10px;
+  color:#de2c28;
+  font-weight: 200;
+  display: flex; 
+  justify-content: center;
 }
