--- a/src/styles/SaveBtn.module.css
+++ b/src/styles/SaveBtn.module.css
@@ -1,14 +1,14 @@
 .btn {
   font-family: "Raleway";
   font-size: 1.2rem;
-  font-weight: 400;
-  margin-bottom: 2rem;
+  font-weight: 300;
+  /* margin-bottom: 2rem; */
   color:#de2c28;
-  margin: 1rem auto;
+  margin: 1rem auto 0 auto;
   padding: 0.5rem 2rem;
   border-radius: 10px;
   cursor: pointer;
-  border: solid 2px #de2c28;
+  border: solid 1px #de2c28;
   height: 40px;
   width: 110px;
   text-align: center;
