--- a/src/styles/SideMenu.module.css
+++ b/src/styles/SideMenu.module.css
@@ -3,17 +3,16 @@
   display: flex;
   flex-direction: column;
   width: 20%;
-  height: 100vh;
-  position: sticky;
+  height: calc(100% - 70px);
+  position: absolute;
   z-index: 0;
-  top: 20px;
-  padding-top: 70px;
-  overflow: visible;
+  top: 70px;
+  overflow: hidden;
 }
 
 .sidemenu_list {
   background-color: #585858;
-  height: 100vh;
+  height: 100%;
   z-index: 1;
 }
 
