--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -313,10 +313,12 @@
   text-align: center;
   margin: 70px 0 0 20%;
   width: 80%;
+  min-width: 500px;
 }
 
 .wrapper_main {
   padding: 2rem;
+  width: 100%;
 }
 
 .row {
@@ -503,13 +505,14 @@
   flex-direction: row;
   background-repeat: repeat;
   background-size: cover;
+  overflow: scroll;
 }
 
 .paper {
   background-color: #ffffff8f;
   border-radius: 30px;
   color: black;
-  width: 70vw;
+  width: 100%;
   max-width: none;
   padding: 2rem 2rem;
   display: flex;
