--- a/src/styles/SideMenu.module.css
+++ b/src/styles/SideMenu.module.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-direction: column;
   width: 20%;
+  min-width: 140px;
   height: calc(100% - 70px);
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   top: 70px;
   overflow: hidden;
 }
