--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -587,7 +587,7 @@
 .content_weather,
 .content_api {
   width: 100%;
-  background: #aaaaa88e;
+  background: #fffdd9;
   padding: .5rem;
   font-size: 14px !important;
   color: rgb(127 127 127);
@@ -600,9 +600,17 @@
 }
 
 .content_api {
-  height: 5rem;
   overflow-y: scroll;
   border: none;
+}
+
+.content_prompt {
+  height: 2rem;
+  border-bottom: 1px solid black;
+}
+
+.content_news {
+  height: 4rem;
 }
 
 .textarea_diaryContent {
@@ -746,6 +754,7 @@
 }
 
 .wrapper_weahterBtn {
+  cursor: pointer;
   position: relative;
   display: flex;
 }
@@ -766,7 +775,7 @@
   background-color: #aaaaa88e;
   height: 40px;
   border-radius: 10px;
-  margin: 1rem 0 .1rem;
+  margin: 1rem 0 .3rem;
 }
 .fontPicker_container {
   display: flex;
@@ -803,6 +812,7 @@
   padding: 5px 5px;
   width: 100%;
   text-align: left;
+  color: black;
 }
 
 .font_btn:hover {
