adjusted some design of the Home page

--- a/src/styles/SideMenu.module.css
+++ b/src/styles/SideMenu.module.css
@@ -4,8 +4,8 @@
   flex-direction: column;
   width: 20%;
   min-width: 140px;
-  height: calc(100% - 59px);
-  position: absolute;
+  height: 100%;
+  position: fixed;
   z-index: 1;
   top: 70px;
   overflow: hidden;
