--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -507,6 +507,7 @@
   background-repeat: repeat;
   background-size: cover;
   overflow: scroll;
+  align-items: flex-start;
 }
 
 .paper {
@@ -515,7 +516,7 @@
   color: black;
   width: 100%;
   max-width: none;
-  padding: 2rem 2rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -615,7 +616,7 @@
 
 .textarea_diaryContent {
   width: 100%;
-  height: 13rem;
+  height: 10rem;
   overflow-y: scroll;
   background-image: url("/dot.jpeg");
   background-repeat: repeat-y;
