--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -313,8 +313,8 @@
   padding: 0;
   min-height: unset;
   text-align: center;
-  margin: 70px 0 0 20%;
-  width: 80%;
+  margin: 70px 0 0 15%;
+  width: 85%;
   min-width: 500px;
 }
 
@@ -381,12 +381,12 @@
   width: 100%;
   padding: 0.5rem;
   background-color: #ffffff;
-  height: 2rem;
+  height: 2.5rem;
   border-radius: 10px;
   color: black;
   font-size: 14px;
   margin-right: -30px;
-  border: 1px solid black;
+  border: 1px solid #de2c28;
   box-shadow: 0px 0px 15px 0px #6a6a6a;
   outline: none;
 }
@@ -427,7 +427,8 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #000;
+  background-color: #fff;
+  border: #de2c28 1px solid;
   /* border: 2px solid #000; */
 }
 .btn_popup_close svg {
@@ -448,12 +449,13 @@
   cursor: pointer;
   padding: 0.5rem 1rem;
   border-radius: 10px;
-  color: var(--c);
+  color:  #de2c28;
   background: white;
+  border: #de2c28 1px solid;
+  font-family: 'raleway';
 }
 
 .btn_popup_save {
-  background: #aaaaa88e;
   width: fit-content;
 }
 .news_btn_cont .btn_popup_save {
@@ -464,12 +466,15 @@
 .news_btn_changeArticle:hover,
 .btn_popup_save:hover {
   color: white;
-  background: black;
+  background:#de2c28;
 }
 
 .news_displayBox {
   position: absolute;
-  background: white;
+  background-image:url('/paper-texture.jpg') ;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 2rem;
   z-index: 2;
   width: 35rem;
@@ -479,11 +484,11 @@
   justify-content: space-between;
   right: 0;
   top: 3rem;
+  border: none;
+  border-radius: 15px;
   box-shadow: 0px 0px 15px 0px #6a6a6a;
 }
 
-.news_displayName {
-}
 
 .news_displayDesc {
   line-height: 1.5;
@@ -549,6 +554,8 @@
   font-size: 1.5rem;
   border: none;
   outline: none;
+  font-family: 'raleway';
+  font-weight: 300;
 }
 
 .ttl_diaryTitle::placeholder {
@@ -613,12 +620,10 @@
   border-bottom: 1px solid #aaaaa88e;
 }
 
-.content_news {
-}
 
 .textarea_diaryContent {
   width: 100%;
-  height: 10rem;
+  height: 14rem;
   overflow-y: scroll;
   background-image: url("/dot.jpeg");
   background-repeat: repeat-y;
@@ -726,6 +731,7 @@
   top: 3.3rem;
   right: 0;
   z-index: 2;
+  border-radius: 15px;
 }
 
 .icon_changePrompt {
@@ -738,6 +744,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem;
+  border-radius: 15px;
   box-shadow: 0px 0px 15px 0px #6a6a6a;
 }
 
@@ -928,7 +935,7 @@
 .footer_container {
   width: 100%;
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   color:#de2c28;
   font-weight: 200;
   display: flex;
